testsuite/tests/typecheck/should_fail/UnliftedNewtypesInstanceFail.stderr

UnliftedNewtypesInstanceFail.hs:13:3: error:
    • Expected a type with representation ‘WordRep’,
      but ‘Bar Bool’ has representation ‘IntRep’
    • In the newtype instance declaration for ‘Bar’
      In the instance declaration for ‘Foo Bool’
